# Django-policy-compiler

./: .gitignore  README.md  pyproject.toml
coursework/: 1_introduction.md  2_model.md  3_compiler_theory.md  4_compiler_practice.md  5_conclusion.md
coursework_text/: 1_introduction.md  2_model.md  3_compiler_theory.md  4_compiler_practice.md  5_conclusion.md  5_test_architecture.md  6_conclusion.md  6_literature.md  7_literature.md  Combined.md
istinaproject/: db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
istinaproject/apps/compiler/: apps.py
istinaproject/compiler/: admin.py  models.py  urls.py  views.py
istinaproject/compiler/migrations/: 0001_initial.py  0002_alter_user_departments_employee_and_more.py  0002_department_paper_user.py  0003_delete_choice_delete_question.py  0003_department_department_responsive_for_paper.py  0004_alter_department_options_alter_paper_options_and_more.py  0004_remove_department_department_responsive_for_paper_and_more.py  0005_alter_department_department_name_and_more.py  0006_alter_user_user_department.py  0007_user_is_superuser.py  0008_rename_user_department_user_user_departments_and_more.py  0009_remove_user_user_departments_remove_user_user_papers_and_more.py
istinaproject/compiler/templates/main_page/: main_page.html
istinaproject/compiler/utils/: compiler_function.py  compiler_function_test.py
istinaproject/homepage/: urls.py  views.py
istinaproject/istinaproject/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
